# Stonewalker

./: .env  .gitignore  CLAUDE.md  DATABASE.md  DEPLOYMENT.md  LICENSE  Makefile  NETLIFY_DEPLOYMENT.md  README.md  TRANSLATION.md  TRANSLATION_README.md  TRANSLATION_TESTING_SETUP.md  build.sh  conftest.py  d  db_manager.py  db_utils.py  dedupe_css.py  excel_to_po.py  fix_translations_polib.py  installed_before.txt  migrate_data.py  netlify.toml  po_to_excel.py  pyproject.toml  pytest.ini  recreate_venv.sh  render_build.sh  requirements.txt  run_dev.sh  run_tests.py  tasks.md  translations.csv  wonderstone_final (2).html
.claude/: tasks.md
.github/workflows/: deploy.yml  tests.yml
docs/: BUSINESS_STRATEGY.md  CLAUDE.md  DEPLOYMENT_SELFHOSTED.md  README.md  WIKI.md  mobile-optimization.md  quality-engineering.md  shop-ux-improvements.md  sprint2-backend.md  sprint2-frontend.md  sprint2-specs.md  sprint2-translations.md
docs/deploy/: backup.sh  deploy.sh  env.template  gunicorn.service  nginx.conf  postgresql.conf.snippet
docs/wiki/: README.md  api.md  architecture.md  getting-started.md  intern-onboarding.md
docs/wiki/features/: authentication.md  map.md  qr-system.md  scanning.md  shop.md  stone-management.md  (+1 more)
forum/: README.md  docker-compose.yml
netlify/functions/: django.js  package.json
scripts/db/: db_manager.py  db_utils.py
scripts/tools/: test_qr_ocr.py
scripts/translation/: excel_to_po.py  fix_plural_translations.py  fix_translations.py  fix_translations_simple.py
source/: .env  manage.py  pyproject.toml  render_build.sh  render_start.sh  test_qr_ocr_django.py  test_qr_ocr_simple.py
source/_old_qr_implementation/: README.md  old_views.py
source/accounts/: admin.py  apps.py  discourse_sso.py  forms.py  models.py  test_email_templates.py  test_social_terms.py  tests.py  urls.py  utils.py  views.py
source/accounts/management/commands/: create_missing_profiles.py
source/accounts/migrations/: 0004_profile.py  0005_emailaddressstate.py  0006_rename_confirmed_emailaddressstate_is_confirmed_and_more.py  0007_emailaddressstate_old_email_emailchangeattempt.py  0008_activation_email_sent_activation_email_sent_at_and_more.py  0009_profile_facebook_url_profile_instagram_handle_and_more.py  0010_subscription_model.py  0011_add_lifetime_plan_choice.py  0012_notificationpreference_code_claimed.py
source/accounts/templates/accounts/: confirm_account.html  log_in.html  log_out.html  log_out_confirm.html  resend_activation_code.html  sign_up.html  terms.html
source/accounts/templates/accounts/emails/: activate_profile.html  activate_profile.txt  change_email.html  change_email.txt  code_claimed.html  code_claimed.txt  confirm_find.html  confirm_find.txt  forgotten_username.html  forgotten_username.txt  restore_password_email.html  restore_password_email.txt  stone_moved.html  stone_moved.txt  stone_scanned.html  stone_scanned.txt
source/accounts/templates/accounts/profile/: change_profile.html  change_profile_form.html
source/app/: backends.py  context_processors.py  settings.py  urls.py  wsgi.py
source/app/conf/development/: settings.py
source/app/conf/production/: settings.py
source/content/assets/css/: styles.css
source/content/assets/js/: common-passwords.js  form-validation.js  header.js  image-upload.js  stone-modal.js  sync-breakpoints.js
source/content/locale/de/LC_MESSAGES/: django.po  django.po.backup  django.po.backup2
source/content/locale/en/LC_MESSAGES/: django.po
source/content/locale/es/LC_MESSAGES/: django.mo  django.po
source/content/locale/fr/LC_MESSAGES/: django.mo  django.po
source/content/locale/it/LC_MESSAGES/: django.po
source/content/locale/ru/LC_MESSAGES/: django.mo  django.po
source/content/locale/zh-hans/LC_MESSAGES/: django.po
source/content/static/: favicon.fa69b2af5559.ico.br  staticfiles.json
source/content/static/css/: styles.css  styles.css.724415324368.backup  styles.css.backup.br  styles.css.br
source/content/static/fonts/GiantBoomDEMO/: GiantBoomFont.otf.br  READ ME.txt.br
source/content/static/js/: header.8d209e4101a7.js.br  header.js  ie10-viewport-bug-workaround.js.br  qr-code.df2eac5fb324.js.br  qr-code.js  stone-modal.js  stone-modal.js.br  sync-breakpoints.9ede2bd9267d.js.br
source/content/templates/: robots.txt
source/content/templates/layouts/default/: nav_links.html  page.html
source/content/templates/main/: about.html  change_language.html  checkout_success.html  claim_stone.html  debug_modals.html  forum.html  impressum.html  index.html  my_stones.html  new_add_stone_modal.html  premium.html  premium_manage.html  privacy.html  qr_test.html  shared_modals.html  shop.html  stone_edit.html  stone_found.html  stone_scan.html  stone_seal_confirm.html  stone_sealed.html  stone_share.html  stonewalker_start.html
source/main/: admin.py  apps.py  certificate_service.py  impressum.json  models.py  pdf_service.py  premium_views.py  qr_service.py  shop_config.json  shop_utils.py  shop_views.py  signals.py  stripe_service.py  test_new_qr_system.py  tests.py  tests_backup_original.py  translation_tests.py  validators.py  views.py
source/main/management/commands/: cleanup_unconfirmed.py  compile_translations.py  generate_steel_tags.py  recalc_distances.py  remove_first_move_images.py
source/main/migrations/: 0001_initial.py  0002_stone_distance_km.py  0003_stone_uuid.py  0004_populate_stone_uuid.py  0005_make_uuid_unique.py  0006_stonescanattempt.py  0007_stone_stone_type.py  0008_add_stone_status_and_qr_fields.py  0009_stone_claimed_at_alter_stone_fk_user_and_more.py  0010_rename_sent_off_to_wandering.py  0011_stone_stone_number.py  0012_qrpack_language.py  0013_stonemove_is_confirmed.py
source/main/tests/: __init__.py  base.py  test_api_endpoints.py  test_backend_features.py  test_frontend_features.py  test_generate_steel_tags.py  test_language_switching.py  test_map_filtering.py  test_models.py  test_premium.py  test_qr_system.py  test_shop_flow.py  test_shop_visibility.py  test_stone_features.py  test_stone_scanning.py  test_stone_workflow.py  test_ui_templates.py
(+3 files in other folders)
