[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stonewalker"
version = "0.1.0"
description = "A Django-based stone hunting game application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.8"
dependencies = [
    "django>=4.2,<5.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.7.0",
    "environs>=11.2.1",
    "django-bootstrap4>=24.4",
    "pillow>=10.4.0",
    "qrcode>=7.4.2",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.6.1",
]
test = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.6.1",
]

[project.urls]
Homepage = "https://stonewalker.org"
Repository = "https://github.com/busssard/Stonewalker"
Documentation = "https://github.com/busssard/Stonewalker#readme"
"Bug Tracker" = "https://github.com/busssard/Stonewalker/issues"

[tool.setuptools.packages.find]
where = ["source"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.po", "*.mo"]

[tool.coverage.run]
source = ["app", "accounts", "main"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/static/*",
    "*/templates/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "accounts", "main", "content"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "django_bootstrap4.*",
    "gunicorn.*",
    "whitenoise.*",
    "qrcode.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "migrations",
]

# =============================================================================
# Ruff - fast Python linter and formatter (replaces flake8, isort, black)
# =============================================================================
[tool.ruff]
target-version = "py38"
line-length = 88
src = ["source"]

# Exclude directories that should not be linted
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    "venv",
    "migrations",
    "_old_qr_implementation",
    "content/static",
    "content/assets/vendor",
]

[tool.ruff.lint]
# Start lenient - only enable rules that catch real bugs and common mistakes.
# Expand over time as the codebase is cleaned up.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "S",    # flake8-bandit (security)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "T20",  # flake8-print (catch stray print statements)
]

# Ignore rules that conflict with existing code patterns or are too noisy
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top of file (Django patterns)
    "S101",   # use of assert (fine in tests, and we exclude tests anyway)
    "S105",   # possible hardcoded password (too many false positives)
    "S110",   # try-except-pass (existing pattern in codebase)
    "S308",   # mark_safe usage (reviewed manually, documented in security audit)
    "B904",   # raise from (would require touching lots of existing code)
    "UP031",  # printf-string-formatting (existing codebase uses % and f-strings)
    "T201",   # print found (there are intentional prints, e.g. email debugging)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use assert, print, hardcoded passwords, etc.
"**/tests/**" = ["S", "T20", "B"]
"**/test_*.py" = ["S", "T20", "B"]
"**/*_tests.py" = ["S", "T20", "B"]
"**/conftest.py" = ["S", "T20", "B"]
# Settings files have specific patterns
"**/settings.py" = ["S105", "E501"]
# Management commands can use print
"**/management/**" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["app", "accounts", "main", "content"]

[tool.ruff.format]
# Match existing black config
quote-style = "preserve"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# Bandit - security linter
# =============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "test",
    "venv",
    ".venv",
    "migrations",
    "_old_qr_implementation",
]
skips = [
    "B101",  # assert used (fine in Django)
    "B311",  # random (not used for crypto)
] 